--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
         "lumen",
         "queue"
     ],
-    "license": "HYS",
+    "license": "MIT",
     "authors": [
         {
             "name": "hys1993",
